<resources>
	<string name="action_cancel">Cancel</string>
	<string name="action_done">Done!</string>
	<string name="action_back">Back</string>
	<string name="action_save">Save</string>
	<string name="action_create">Create</string>
	<string name="action_add">Add (%1$d)</string>
	<string name="action_more">More</string>
	<string name="action_next">Next</string>
	<string name="action_enter">Enter</string>
	<string name="action_start">Start</string>
	<string name="action_unsend">Unsend</string>
	<string name="action_resend">Resend</string>
	<string name="action_hide">Hide</string>
	<string name="action_copy">Copy</string>
	<string name="action_got_it">Got it!</string>
	<string name="action_tap_to_add">Tap to add</string>
	<string name="action_play">Play</string>
	<string name="action_add_friend">Add Friend</string>
	<string name="action_adding_friend">Adding...</string>
	<string name="action_friend_added">Friend added!</string>
	<string name="action_friend">Added</string>
	<string name="action_unblock">Unblock</string>
	<string name="action_hang_live">Video call</string>
	<string name="action_add_member">Add in group</string>
	<string name="action_member_added">Added</string>
	<string name="action_group_member">Member</string>
	<string name="action_nevermind">Nevermind</string>
	<string name="action_unhide">Add Friend</string>
	<string name="action_invite">Invite</string>
	<string name="action_sms">iMessage</string>
	<string name="action_messenger">Messenger</string>
	<string name="action_report">Report</string>
	<string name="action_user_reported">Reported!</string>
	<string name="group_member">member</string>
	<string name="group_members">members</string>
	<string name="error_unknown">:bird: Something went wrong. Try again in 30s.</string>
	<string name="error_technical">:warning: Technical turbulence</string>
	<string name="error_no_network">:satellite: No Internet here</string>
	<string name="error_join_room">Can\'t enter the call, try again is 30s.</string>
	<string name="image_picker_title">Add an avatar</string>
	<string name="image_picker_chat_title">Send an image</string>
	<string name="image_picker_camera">Take a selfie :camera_with_flash:</string>
	<string name="image_picker_library">Open camera roll :arrow_up:</string>
	<string name="image_picker_documents">Documents :file_folder:</string>
	<string name="invite_generating_link">Generating a link to share...</string>
	<string name="contacts_search_new">NEW</string>
	<string name="contacts_search_new_tooltip">Find your friends already on Tribe!</string>
	<string name="contacts_section_facebook_no_os_facebook_title">Facebook friends</string>
	<string name="contacts_section_facebook_no_os_facebook_description">Got to the "Settings" of your phone to connect your Facebook account!</string>
	<string name="contacts_section_facebook_no_os_facebook_cancel">Cancel</string>
	<string name="contacts_section_facebook_no_os_facebook_settings">Got it!</string>
	<string name="contacts_section_addressbook_friends_in_app">Would have %1$d friends on Tribe</string>
	<string name="contacts_section_addressbook_friends_in_app_prefix">Would have</string>
	<string name="contacts_section_addressbook_friends_in_app_friend">you as friend</string>
	<string name="contacts_section_addressbook_friends_in_app_friends">%1$d friends</string>
	<string name="contacts_section_addressbook_friends_in_app_suffix">on Tribe</string>
	<string name="contacts_section_addressbook_friends_in_app_including">including</string>
	<string name="permission_contacts_disabled_alert_title">"Address book" permission denied</string>
	<string name="permission_contacts_disabled_alert_description">Don\'t worry! You can enable it right now in your "Settings".</string>
	<string name="permission_contacts_disabled_alert_redirect">Go to "Settings"</string>
	<string name="permission_contacts_disabled_alert_cancel">Stay blocked</string>
	<string name="permission_location_disabled_alert_title">"Location" permission denied</string>
	<string name="permission_location_disabled_alert_description">Don\'t worry! You can enable it right now in your Settings.</string>
	<string name="permission_location_disabled_alert_redirect">Go to "Settings"</string>
	<string name="permission_location_disabled_alert_cancel">No, thanks</string>
	<string name="permission_push_fake_alert_title">Please Turn On Notifications</string>
	<string name="permission_push_fake_alert_description">This way, you will know when your friends click on a link you send, when they\'re video calling you or when they\'re online.</string>
	<string name="permission_push_fake_alert_allow">OK</string>
	<string name="permission_push_fake_alert_cancel">Read more</string>
	<string name="permission_push_disabled_alert_title">"Push" permission denied</string>
	<string name="permission_push_disabled_alert_description">Don\'t worry! You can enable it right now in your "Settings".</string>
	<string name="permission_push_disabled_alert_redirect">Go to "Settings"</string>
	<string name="permission_push_disabled_alert_cancel">Stay alone</string>
	<string name="permission_camera_disabled_alert_title">"Camera" or "Microphone" permission denied</string>
	<string name="permission_camera_disabled_alert_description">Don\'t worry! You can enable it right now in your "Settings".</string>
	<string name="permission_camera_disabled_alert_redirect">Go to "Settings"</string>
	<string name="permission_camera_disabled_alert_cancel">Keep it blocked</string>
	<string name="permission_photos_disabled_alert_title">"Photo Album" permission denied</string>
	<string name="permission_photos_disabled_alert_description">Don\'t worry! You can enable it right now in your "Settings".</string>
	<string name="permission_photos_disabled_alert_redirect">Go to "Settings"</string>
	<string name="permission_photos_disabled_alert_cancel">Keep it blocked</string>
	<string name="permission_global_popup_title">Make sure everything works perfectly!</string>
	<string name="permission_global_popup_message">Let’s take care of permissions so you don’t miss anything from the most incredible video messenger.</string>
	<string name="permission_global_popup_cancel">Do it later</string>
	<string name="permission_global_popup_confirm">LET\'S GO!</string>
	<string name="permission_facebook_popup_title">Find friends from "Facebook"</string>
	<string name="permission_facebook_popup_message">Your Facebook friends will be countinuously synced so you can see who you already know on Tribe.</string>
	<string name="permission_facebook_popup_ok">Perfect!</string>
	<string name="permission_facebook_popup_ko">Read more</string>
	<string name="permission_addressbook_popup_title">Find friends from your "Address Book"</string>
	<string name="permission_addressbook_popup_message">Your friends from your "Address Book" will be countinuously synced so you can see who you already know on Tribe.</string>
	<string name="permission_addressbook_popup_ok">Perfect!</string>
	<string name="permission_addressbook_popup_ko">Read more</string>
	<string name="tribe_distance_nearby">Nearby</string>
	<string name="invitation_sms_error_parse_number_title">The phone number of this contact doesn\'t look right</string>
	<string name="invitation_sms_error_parse_number_message">%1$s\n\nThis contact didn\'t have a country prefix. We tried to add %2$s but it didn\'t work.</string>
	<string name="invitation_sms_error_parse_number_action_edit">Fix the number</string>
	<string name="invitation_sms_error_parse_number_action_use">Use it anyway</string>
	<string name="live_notification_action_hang_live">Join!</string>
	<string name="live_notification_action_decline">Decline</string>
	<string name="live_notification_action_add_as_friend">Add as friend</string>
	<string name="live_notification_action_hang_live_friend">Join %1$s \'s challenge</string>
	<string name="live_notification_action_hang_live_group">Join %1$s \'s challenge</string>
	<string name="live_notification_invite_after_decline">Drag %1$s a guest</string>
	<string name="live_notification_call_after_decline">Challenge %1$s</string>
	<string name="live_notification_buzz_after_decline">Buzz %1$s</string>
	<string name="live_notification_action_see_thread">See the conversation</string>
	<string name="live_notification_action_reply">Reply</string>
	<string name="live_notification_online">is online</string>
	<string name="live_notification_title">Pick an option</string>
	<string name="live_notification_message">Here is what you can do\nwith %1$s now.</string>
	<string name="live_notification_call">:telephone_receiver: Challenge %1$s</string>
	<string name="live_notification_leave">:telephone_receiver: Join %1$s challenge</string>
	<string name="live_notification_add_as_guest">:busts_in_silhouette: Add %1$s in this challenge</string>
	<string name="live_notification_text">:speech_balloon: Text %1$s</string>
	<string name="live_notification_decline">:no_mobile_phones: Decline %1$s challenge</string>
	<string name="live_notification_ringing_people">Ringing %1$d people</string>
	<string name="live_notification_waiting_people">Waiting for %1$d people to join</string>
	<string name="decline_menu_title">Text %1$s</string>
	<string name="decline_menu_message">Tap on an option to be sent\to %1$s in the chat</string>
	<string name="decline_menu_answer1">Let\'s catch up after! :dizzy:</string>
	<string name="live_drag_friends">Drag friends!</string>
	<string name="live_share_new_call_or_dice_description_call">Share the call link</string>
	<string name="live_share_new_call_or_dice_description_or">or</string>
	<string name="live_share_new_call_or_dice_description_dice">Roll the dice</string>
	<string name="live_share_new_call_or_dice_description_subtitle">to see people joining the call!</string>
	<string name="live_share_roll_the_dice_button">Meet new people</string>
	<string name="live_share_new_call_button_simple">Share</string>
	<string name="live_share_new_call_button_title">Call link</string>
	<string name="profile_user_infos">Name, avatar and more :pencil2:</string>
	<string name="profile_invisible_mode">Allow people to add me :mag:</string>
	<string name="profile_video_demo_title">Watch a quick demo :video_camera:</string>
	<string name="profile_fullscreen_notifications_android">Fullscreen call notifications :telephone_receiver:</string>
	<string name="profile_blocked_friends">Blocked or hidden chats :no_entry:</string>
	<string name="profile_manage_friendships">Is playing notification :bell:</string>
	<string name="profile_rate_us">Rate us :hearts:</string>
	<string name="profile_follow_us">Follow us :metal:</string>
	<string name="profile_logout">Logout :skull:</string>
	<string name="profile_change_phone">Change phone number :telephone:</string>
	<string name="profile_facebook_account">Facebook profile :bust_in_silhouette:</string>
	<string name="live_sharing_infos_you_mins">%1$d mins</string>
	<string name="live_sharing_infos_you_with">with</string>
	<string name="live_sharing_infos_you_friends">%1$d friends</string>
	<string name="live_sharing_infos_i_spent">I just spent</string>
	<string name="live_sharing_infos_on_a">on a</string>
	<string name="live_sharing_infos_live_call">live call :fire:</string>
	<string name="enjoying_tribe_popup_action1">Not yet :broken_heart:</string>
	<string name="enjoying_tribe_popup_action2">Love it! :heart:</string>
	<string name="enjoying_tribe_popup_title">Enjoying tribe?</string>
	<string name="enjoying_tribe_popup_subtitle">Tap one of these two\noptions to let us know!</string>
	<string name="linked_friends_title">Synchronized friends! :electric_plug:</string>
	<string name="linked_friends_facebook">Facebook friends</string>
	<string name="linked_friends_address_book">Address book contacts</string>
	<string name="linked_friends_status_not_linked">Not linked yet</string>
	<string name="chat_live_status_none">Chat</string>
	<string name="chat_live_status_new">New</string>
	<string name="chat_live_status_hide">Hide</string>
</resources>