<?xml version="1.0" encoding="utf-8"?>
<com.tribe.app.presentation.view.component.profile.ProfileView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@null"
    android:fillViewport="true"
    tools:context=".presentation.view.activity.ProfileActivity"
    >

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@null"
      android:orientation="vertical"
      >

    <com.tribe.app.presentation.view.component.ActionView
        android:id="@+id/viewActionVideo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        app:actionTitle="@string/profile_video_demo_title"
        app:actionType="hierarchy"
        />

    <include layout="@layout/view_separator_simple"/>

    <com.tribe.app.presentation.view.component.ActionView
        android:id="@+id/viewActionProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        app:actionTitle="@string/profile_user_infos"
        app:actionType="hierarchy"
        />

    <include layout="@layout/view_separator_simple"/>

    <com.tribe.app.presentation.view.component.ActionView
        android:id="@+id/viewActionManageFriendships"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        app:actionTitle="@string/profile_manage_friendships"
        app:actionType="hierarchy"
        />

    <include layout="@layout/view_separator_simple"/>

    <com.tribe.app.presentation.view.component.ActionView
        android:id="@+id/viewActionBlocked"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        app:actionTitle="@string/profile_blocked_friends"
        app:actionType="hierarchy"
        />

    <include layout="@layout/view_separator_simple"/>

    <com.tribe.app.presentation.view.component.ActionView
        android:id="@+id/viewActionVisible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        app:actionTitle="@string/profile_invisible_mode"
        app:actionType="toggle"
        />

    <include layout="@layout/view_separator_simple"/>

    <com.tribe.app.presentation.view.component.ActionView
        android:id="@+id/viewActionPhoneIntegration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        app:actionTitle="@string/profile_fullscreen_notifications_android"
        app:actionType="toggle"
        />

    <include layout="@layout/view_separator_simple"/>

    <com.tribe.app.presentation.view.component.ActionView
        android:id="@+id/viewActionChangePhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        app:actionTitle="@string/profile_change_phone"
        app:actionType="hierarchy"
        />

    <include layout="@layout/view_separator_simple"/>

    <com.tribe.app.presentation.view.component.ActionView
        android:id="@+id/viewActionFacebookAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        app:actionTitle="@string/profile_facebook_account"
        app:actionType="hierarchy"
        />

    <include layout="@layout/view_separator_simple"/>

    <com.tribe.app.presentation.view.component.ActionView
        android:id="@+id/viewActionRateUs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        app:actionTitle="@string/profile_rate_us"
        app:actionType="regular"
        />

    <include layout="@layout/view_separator_simple"/>

    <com.tribe.app.presentation.view.component.ActionView
        android:id="@+id/viewActionFollow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        app:actionTitle="@string/profile_follow_us"
        app:actionType="regular"
        />

    <include layout="@layout/view_separator_simple"/>

    <com.tribe.app.presentation.view.component.ActionView
        android:id="@+id/viewActionLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        app:actionTitle="@string/profile_logout"
        app:actionType="regular"
        />

    <include layout="@layout/view_separator_simple"/>

    <include layout="@layout/view_profile_footer"/>

  </LinearLayout>
</com.tribe.app.presentation.view.component.profile.ProfileView>