<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/shareWatermarkViewBg"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:layout_gravity="center"
    android:background="@color/blue.2"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="310dp"
    android:paddingEnd="125dp"
    android:paddingStart="125dp"
    android:paddingTop="310dp"
    android:scaleType="centerCrop"
    >
  <ImageView
      android:id="@+id/imageView3"
      android:layout_width="500dip"
      android:layout_height="wrap_content"
      android:layout_marginBottom="80dp"
      android:layout_marginTop="100dp"
      android:padding="20dp"
      android:scaleType="centerInside"
      android:src="@drawable/picto_watermark"
      />

  <com.tribe.app.presentation.view.widget.AvatarsSuperposedLayout
      android:id="@+id/avatarsSuperposedView"
      android:layout_width="wrap_content"
      android:layout_height="200dp"
      android:layout_marginBottom="30dp"
      />

  <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="5dp"
      android:orientation="horizontal"
      >
    <com.tribe.app.presentation.view.widget.TextViewFont
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/live_sharing_infos_i_spent"
        android:textSize="50sp"
        style="@style/Circular.2.White40"
        />
    <com.tribe.app.presentation.view.widget.TextViewFont
        android:id="@+id/txtMinutesSharingCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/live_sharing_infos_you_mins"
        android:textSize="50sp"
        style="@style/Circular.2"
        />
  </LinearLayout>


  <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      >
    <com.tribe.app.presentation.view.widget.TextViewFont
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:lineSpacingExtra="4dp"
        android:text="@string/live_sharing_infos_you_with"
        android:textSize="50sp"
        style="@style/Circular.2.White40"
        />
    <com.tribe.app.presentation.view.widget.TextViewFont
        android:id="@+id/txtFriendsSharingCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:lineSpacingExtra="4dp"
        android:text="@string/live_sharing_infos_you_friends"
        android:textSize="50sp"
        style="@style/Circular.2"
        />
    <com.tribe.app.presentation.view.widget.TextViewFont
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:lineSpacingExtra="4dp"
        android:text="@string/live_sharing_infos_on_a"
        android:textSize="50sp"
        style="@style/Circular.2.White40"
        />
    <com.tribe.app.presentation.view.widget.TextViewFont
        android:id="@+id/txtSharingCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:lineSpacingExtra="4dp"
        android:text="@string/live_sharing_infos_live_call"
        android:textSize="50sp"
        style="@style/Circular.2"
        />
  </LinearLayout>

  <ImageView
      android:layout_width="400dip"
      android:layout_height="wrap_content"
      android:layout_marginBottom="100dp"
      android:layout_marginTop="80dp"
      android:padding="40dp"
      android:scaleType="centerInside"
      android:src="@drawable/picto_os_cta"
      />

</LinearLayout>