<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@null"
    android:gravity="center"
    android:orientation="vertical"
    >

  <com.tribe.app.presentation.view.widget.TextViewFont
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/vertical_margin_small"
      android:maxLines="1"
      android:text="@string/live_share_new_call_button_title"
      style="@style/Body.Two.White"
      />

  <FrameLayout
      android:id="@+id/btnInvite"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="@dimen/horizontal_margin_small"
      android:layout_marginEnd="@dimen/horizontal_margin_smaller"
      android:layout_marginStart="@dimen/horizontal_margin_smaller"
      android:layout_marginTop="@dimen/horizontal_margin_small"
      android:background="@drawable/selectable_button_all_rounded_5_white"
      android:clickable="true"
      >

    <com.tribe.app.presentation.view.widget.TextViewFont
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/vertical_margin_smaller"
        android:drawablePadding="2.5dp"
        android:drawableStart="@drawable/picto_share_link"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/live_share_new_call_button_simple"
        style="@style/Body.Two.Black"
        />

  </FrameLayout>

  <ImageView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:src="@drawable/picto_invite_separator"
      />

  <com.tribe.app.presentation.view.widget.TextViewFont
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="bottom|center_horizontal"
      android:layout_margin="@dimen/vertical_margin_small"
      android:text="@string/live_drag_friends"
      style="@style/Body.Two.White"
      />

</LinearLayout>